WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
24957
REGRESSION (
r41547
): Google calendar widget no longer shows upcoming events
https://bugs.webkit.org/show_bug.cgi?id=24957
Summary
REGRESSION (r41547): Google calendar widget no longer shows upcoming events
Ismail Donmez
Reported
2009-03-31 08:36:57 PDT
How to reproduce; - Add some upcoming events in your Google calendar - Enable Google calendar widget in GMail Lab settings Expected behaviour: Calendar widget shows upcoming events. Current behaviour: Upcoming event list is empty. Used to work in older WebKit revisions (Safari 4 Beta works fine), so this is a regression.
Attachments
proposed fix
(4.82 KB, patch)
2009-04-01 07:41 PDT
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2009-03-31 09:04:04 PDT
This regressed between the
r41545
and
r41698
nightlies. I'll try to find the exact point of regression by bisecting local builds.
Cameron Zwarich (cpst)
Comment 2
2009-03-31 11:07:53 PDT
This regressed in
r41547
:
http://trac.webkit.org/changeset/41547
This is probably not our bug, so I'll put it in the Evangelism component.
Cameron Zwarich (cpst)
Comment 3
2009-03-31 11:10:27 PDT
You can see the console spam from attempts to set headers that are no longer allowed by the XHR spec.
Cameron Zwarich (cpst)
Comment 4
2009-03-31 11:58:45 PDT
Marking this P2 because it's an evangelism bug.
Cameron Zwarich (cpst)
Comment 5
2009-03-31 12:10:09 PDT
The headers that give messages in the console are the Authorization and Connection headers. Since the Connection header was already disallowed before
r41547
, it must be the Authorization header that is causing problems. I also get the following message: Unsafe JavaScript attempt to access frame with URL
http://mail.google.com/mail/?ui=2&view=bsp&ver=1qygpcgurkovy
from frame with URL
https://www.google.com/calendar/mgadget?container=gm&v=48f45299de1a1e3b68bad2f5c3c6a20&lang=en&country=CA&view=default&rpctoken=w4ie8s41p89w&libs=js%2Fdynamic-height%3Agoogle.waitforload%3Arpc%3Asetprefs.js%3Aauth-refresh&parent=http%3A%2F%2Fmail.google.com%2Fmail%2Fhtml&pid=&up_calendarColors=(%23A32929)&up_calendarFeeds=(cwzwarich%2540gmail.com)&up_dateFormat=0&up_firstDay=0&up_hideAgenda=0&up_showDatepicker=false&up_showEmptyDays=0&up_showExpiredEvents=true&up_timeFormat=1%3A00pm&mid=0#st=e%3DAA6WCYaIzsKw7izCIrnHKw5hc1jwPTFciJoWcejS8SSVvhuWd2HrcK7TPIdwENlQSnoKyDBn2FW90sH95htVajbKNmqLdQckrjis6UL%252B3k1Vt1G2GGHPLBjf%252BfsGovdPU8Sgk0%252F67HqV%26c%3Dgm
. Domains, protocols and ports must match.
Alexey Proskuryakov
Comment 6
2009-03-31 14:28:14 PDT
I am not aware of any real reason to block the Authorization header, other than following the spec. Anne, are you? Undoing this part of the change may be a better solution than evangelizing Google.
Eric Seidel (no email)
Comment 7
2009-03-31 14:55:08 PDT
I've filed a Google bug on the issue:
http://b/1749893
Jon@Chromium
Comment 8
2009-03-31 16:16:33 PDT
Also reported to the public Chromium bug tracker at
http://code.google.com/p/chromium/issues/detail?id=8935
Alexey Proskuryakov
Comment 9
2009-04-01 07:41:13 PDT
Created
attachment 29160
[details]
proposed fix So far, there seems to be no resistance to the idea of removing Authorization from the list of forbidden headers on public-webapps mailing list.
Maciej Stachowiak
Comment 10
2009-04-06 21:48:29 PDT
Fix looks good to me.
Maciej Stachowiak
Comment 11
2009-04-07 11:01:46 PDT
Comment on
attachment 29160
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 12
2009-04-08 00:04:10 PDT
Committed <
http://trac.webkit.org/changeset/42314
>. Please verify that this actually fixes the calendar widget - I don't use it, so I didn't attempt to.
Ismail Donmez
Comment 13
2009-04-09 22:18:26 PDT
Verified.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug