        Reviewed by Maciej Stachowiak.

https://bugs.webkit.org/show_bug.cgi?id=24957
        REGRESSION: Google calendar widget no longer shows upcoming events

        Test: http/tests/xmlhttprequest/authorization-header.html

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequestStaticData::XMLHttpRequestStaticData): Removed Authorization from
        the list of forbidden headers.



Canonical link: https://commits.webkit.org/34368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42314 268f45cc-cd09-0410-ab3c-d52691b4dbfc